syntax = "proto3";

package envoy.extensions.common.key_value.v3;

import "envoy/config/core/v3/extension.proto";

import "udpa/annotations/status.proto";
import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.extensions.common.key_value.v3";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Key Value Store storage plugin]

// [#alpha:]
// This shared configuration for Envoy key value stores.
message KeyValueStoreConfig {
  // [#extension-category: envoy.common.key_value]
  config.core.v3.TypedExtensionConfig config = 1 [(validate.rules).message = {required: true}];
}
